vbnc/vbnc/tests/Errors/33101.vb
Module ArgumentTypeInference

    Sub C2(Of T)(ByVal z As Nullable(Of T))
    End Sub
End Module